# SoftwareOccluder

./: .gitmodules  CMakeLists.txt
soccl/: CMakeLists.txt
soccl/include/: soccl.hpp
soccl/src/: soccl.cpp
soccl/test/: CMakeLists.txt
soccl/test/src/: soccl_test.cpp
